@@ -8,7 +8,7 @@ Disassembly of section .plt:
 
 .* <.plt>:
     .*:	e52de004 	push	{lr}		; \(str lr, \[sp, #-4\]!\)
-    .*:	e59fe004 	ldr	lr, \[pc, #4\]	; .* <\.plt\+0x10>
+    .*:	e59fe004 	ldr	lr, \[pc, #4\]	; .* <_start-0x10>
     .*:	e08fe00e 	add	lr, pc, lr
     .*:	e5bef008 	ldr	pc, \[lr, #8\]!
     .*:	.* 	.*
@@ -20,7 +20,7 @@ Disassembly of section .text:
 .* <_start>:
     .*:	e1a0c00d 	mov	ip, sp
     .*:	e92dd800 	push	{fp, ip, lr, pc}
-    .*:	e59f0004 	ldr	r0, \[pc, #4\]	; .* <.text\+0x14>
+    .*:	e59f0004 	ldr	r0, \[pc, #4\]	; .* <_start\+0x14>
     .*:	e89d6800 	ldm	sp, {fp, sp, lr}
     .*:	e12fff1e 	bx	lr
     .*:	.* 	.*
