@@ -1,3 +1,7 @@
+2007-05-22  Paul Brook  <paul@codesourcery.com>
+
+	* gas/arm/backslash-at.d: Update expected output.
+
 2007-05-17  H.J. Lu  <hongjiu.lu@intel.com>
 
 	2003-06-05  Michal Ludvig  <mludvig@suse.cz>
